Fixed category page not showing anything

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -13,3 +13,9 @@
 //    -moz-border-radius: 10px;
 //    -webkit-border-radius: 10px;
 //}
+
+#grid-channel-container li {
+  a:not(:last-child) {
+    margin: 0 5px;
+  }
+}
